syntax = "proto3";

package accounts;

option java_multiple_files = true;
option java_package = "hive.svc.accounts";
option java_outer_classname = "AccountsSvc";

import "hive_common.proto";

// Account service definition.
service Accounts {
  // refresh attestation
  rpc UpdateAttestation (common.SignedChallenge) returns (common.Certificate);

  // check attestation
  rpc CheckAttestation (common.Certificate) returns (CheckResult);

  // publish new prekeys
  rpc PublishPreKeys (common.PreKeyBundle) returns (PublishKeyResult);
}

message CheckResult {
  //TODO
}

message PublishKeyResult {
  //TODO
}
